spacing issue

--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@ input[type=button], input[type=submit], input[type=reset] {
   flex-direction: row;
   justify-content: center;
   margin-top: 25px;
-  margin-left: -40px;
+  /* margin-left: -40px; */
 }
 
 
